<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcut1"
        android:enabled="true"
        android:icon="@drawable/yoona"
        android:shortcutShortLabel="@string/shortcutShortLabel"
        android:shortcutLongLabel="@string/shortcutLongLabel"
        android:shortcutDisabledMessage="@string/shortcutDisabledMessage">
        <intent
            android:action="guo"
            android:targetPackage="guo.guo"
            android:targetClass="guo.guo.MainActivity"
            />
    </shortcut>

    <shortcut
        android:shortcutId="shortcutid2"
        android:enabled="true"
        android:icon="@drawable/girl"
        android:shortcutShortLabel="@string/shortcutShortLabel2"
        android:shortcutLongLabel="@string/shortcutLongLabel2"
        android:shortcutDisabledMessage="@string/shortcutDisabledMessage2">
        <intent
            android:action="guo2"
            android:targetPackage="guo.guo"
            android:targetClass="guo.guo.mainitem._2rxjava2.MainRxjava"
            />
    </shortcut>

</shortcuts>